--- a/public/end.html
+++ b/public/end.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Password Strength</title>
-    <!-- zxcvbn CDN 필수 -->
-    <script src="https://cdn.jsdelivr.net/npm/zxcvbn@4.4.2/dist/zxcvbn.js"></script>
-    <!-- end.js를 모듈로 불러오기 -->
-    <script type="module" src="end.js" defer></script>
-  </head>
-  <body>
-    <!-- 빈 body: JS가 container 포함 내용 전부 생성 -->
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Password Strength</title>
+  <!-- zxcvbn CDN 필수 -->
+  <script src="https://cdn.jsdelivr.net/npm/zxcvbn@4.4.2/dist/zxcvbn.js"></script>
+  <!-- end.js 모듈 -->
+  <script type="module" src="end.js" defer></script>
+</head>
+<body></body>
 </html>
